--- a/backend/tsconfig.json
+++ b/backend/tsconfig.json
@@ -9,10 +9,6 @@
     "esModuleInterop": true,
     "skipLibCheck": true,
     "moduleResolution": "node",
-    "allowSyntheticDefaultImports": true,
-    "baseUrl": ".",
-    "paths": {
-      "@shared/*": ["./shared/*"]
-    }
+    "allowSyntheticDefaultImports": true
   }
 }
