--- a/backend/package.json
+++ b/backend/package.json
@@ -6,23 +6,19 @@
   "scripts": {
     "dev": "tsx server/index.ts",
     "build": "esbuild server/index.ts --platform=node --packages=external --bundle --format=esm --outdir=dist",
-    "start": "node dist/index.js",
-    "check": "tsc"
+    "start": "node dist/index.js"
   },
   "dependencies": {
-    "@neondatabase/serverless": "^0.10.4",
     "bcryptjs": "^3.0.2",
     "drizzle-orm": "^0.39.1",
     "drizzle-zod": "^0.7.0",
     "express": "^4.21.2",
-    "zod": "^3.24.2",
-    "zod-validation-error": "^3.4.0"
+    "zod": "^3.24.2"
   },
   "devDependencies": {
     "@types/bcryptjs": "^2.4.6",
     "@types/express": "4.17.21",
     "@types/node": "20.16.11",
-    "drizzle-kit": "^0.30.4",
     "esbuild": "^0.25.0",
     "tsx": "^4.19.1",
     "typescript": "5.6.3"
