--- a/backend/package.json
+++ b/backend/package.json
@@ -13,14 +13,17 @@
     "drizzle-orm": "^0.39.1",
     "drizzle-zod": "^0.7.0",
     "express": "^4.21.2",
-    "zod": "^3.24.2"
+    "zod": "^3.24.2",
+    "esbuild": "^0.25.0",
+    "typescript": "5.6.3",
+    "@neondatabase/serverless": "^0.10.4",
+    "ws": "^8.17.1"
   },
   "devDependencies": {
     "@types/bcryptjs": "^2.4.6",
     "@types/express": "4.17.21",
     "@types/node": "20.16.11",
-    "esbuild": "^0.25.0",
-    "tsx": "^4.19.1",
-    "typescript": "5.6.3"
+    "@types/ws": "^8.5.10",
+    "tsx": "^4.19.1"
   }
 }
