--- a/backend/.env.example
+++ b/backend/.env.example
@@ -1,14 +1,11 @@
-# Backend Environment Variables
-# Copy this file to .env and update the values
+# Database Configuration
+DATABASE_URL=postgresql://user:password@host:5432/database
 
-# Database URL (Neon, Railway Postgres, or other PostgreSQL provider)
-DATABASE_URL=postgresql://user:password@host:port/database
-
-# Frontend URL (for CORS configuration)
-FRONTEND_URL=https://jobportal-frontend.onrender.com
-
-# Port (Render will provide this automatically)
-PORT=10000
-
-# Additional environment variables
+# Environment
 NODE_ENV=production
+
+# Frontend URL for CORS
+FRONTEND_URL=https://your-frontend-url.onrender.com
+
+# Port (Render will override this)
+PORT=10000
