--- a/frontend/.env.example
+++ b/frontend/.env.example
@@ -1,8 +1,2 @@
-# Frontend Environment Variables
-# Copy this file to .env and update the values
-
-# Backend API URL (for production deployment)
-VITE_API_URL=https://jobportal-backend.onrender.com
-
-# For local development, leave empty or use:
-# VITE_API_URL=http://localhost:10000
+# Backend API URL
+VITE_API_URL=https://your-backend-url.onrender.com
